--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
 group = 'pl.vishop'
 version = '1.3'
 
+compileJava.options.encoding = 'UTF-8'
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
