--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,8 +8,19 @@ shopId: ""
 serverId: ""
 
 # Ogłoszenia o zakupie wyświetlane na chacie
-# Więcej informacji na stronie pluginu (github)
+# Więcej informacji: https://github.com/ivall/VIshop-plugin/blob/main/README.md
+# w sekcji "Wyświetlanie informacji o zakupie na chacie"
+
+# Jeśli posiadasz wersję serwera 1.16 lub nowszą oraz silnik spigot lub jego fork (paper, purpur itp.),
+# możesz użyć własnych kolorów w wiadomościach czy tekstów tęczowych.
+# Składnia tych wiadomości znajduje się pod linkiem: https://github.com/Phoenix616/MineDown/blob/master/README.md
+# W przeciwnym wypadku nie zadziała Ci drugi przykład.
+
 broadcasts:
   testowy-broadcast:
     - 'Gracz &a{NICK} &fzakupił &eVIP''a &fw naszym sklepie!'
     - ''
+  drugi-broadcast:
+    - 'Gracz &a{NICK} &fzakupił &dsVIP''a &fw naszym sklepie!'
+    - '&rainbow&Ten tekst będzie tęczowy!'
+    - '&#123456Dziękujemy!'
