Use GSON instead of org.json (resolves #4)
* Change JSON library and config error messages
* Update config.yml
* Some changes

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,11 @@
 # Klucz API do autoryzacji połączeń
+# Znajdziesz go wchodząc do panelu i wybierając zakładkę Ustawienia
 apiKey: ""
 
 # ID sklepu
+# Jest na głównej stronie panelu sklepu
 shopId: ""
 
 # ID serwera w sklepie
+# Znajduje się ono w zakładce Serwery w panelu
 serverId: ""
