--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
-rootProject.name = 'ViShopPlugin'
+rootProject.name = 'vishop-plugin'
+
+include 'common'
+include 'bukkit'
+include 'bungee'
+include 'velocity'
