--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,57 @@
 plugins {
-    id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.0'
+    id 'java-library'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-group = 'pl.vishop'
-version = '1.3'
+allprojects {
+    group = 'pl.vishop.plugin'
+    version = '2.0'
 
-compileJava.options.encoding = 'UTF-8'
+    compileJava.options.encoding = 'UTF-8'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 
-repositories {
-    mavenCentral()
+    apply plugin: 'java-library'
+    apply plugin: 'com.github.johnrengelman.shadow'
 
-    maven {
-        name = 'spigotmc-repo'
-        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+    repositories {
+        mavenCentral()
+        mavenLocal()
+
+        maven {
+            name = 'spigotmc-repo'
+            url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+        }
+
+        maven {
+            name = 'bungeecord-repo'
+            url = 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
+
+        maven {
+            name = 'velocity-repo'
+            url = 'https://repo.papermc.io/repository/maven-public/'
+        }
+    }
+
+    shadowJar {
+        dependencies {
+            exclude(dependency('org.jetbrains:annotations'))
+        }
+
+        relocate 'kotlin', 'lib.kotlin'
+        relocate 'okhttp3', 'lib.okhttp3'
+        relocate 'okio', 'lib.okio'
     }
 }
 
 dependencies {
-    compileOnly 'org.bukkit:bukkit:1.8.8-R0.1-SNAPSHOT'
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-}
-
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
-    }
+    implementation project(':bukkit')
+    implementation project(':bungee')
+    implementation project(':velocity')
 }
 
 shadowJar {
-    //minimize()
-
-    dependencies {
-        exclude(dependency('org.jetbrains:annotations'))
-    }
-
-    relocate 'kotlin', 'lib.kotlin'
-    relocate 'okhttp3', 'lib.okhttp3'
-    relocate 'okio', 'lib.okio'
-
-    archiveFileName = "${rootProject.name} v${archiveVersion.get()}.${archiveExtension.get()}"
+    archiveFileName = "ViShopPlugin v${archiveVersion.get()}.${archiveExtension.get()}"
 }
