Fix UTF-8 support

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ allprojects {
     apply plugin: 'java-library'
     apply plugin: 'com.github.johnrengelman.shadow'
 
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
+
     repositories {
         mavenCentral()
         mavenLocal()
