use same config file in hytale as normal minecraft plugin

--- a/hytale/build.gradle
+++ b/hytale/build.gradle
@@ -24,6 +24,7 @@ ext {
 
 dependencies {
     implementation project(':common')
+    implementation "org.yaml:snakeyaml:2.5"
     compileOnly (files("$hytaleHome/install/release/package/game/latest/Server/HytaleServer.jar"))
 }
 
